<resources>
    <string name="app_name">SkillsApp</string>
    <string name="description">SkillsApp logo</string>
    <string name="desc">icon</string>
    <string name="log_in_here">Log in here</string>
    <string name="nom">Nom :</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="e_mail">E-mail :</string>
    <string name="entrez_votre_e_mail">Entrez votre e-mail</string>
    <string name="valider">Valider</string>
    <string name="entrez_votre_date_de_naissance">Entrez votre date de naissance</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="entrez_votre_num_ro_de_t_l_phone">Entrez votre numéro de téléphone</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone :</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="already_registered">Already registered?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search_results">Résultat de la recherche</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="logo">logo</string>
    <string name="icon">icon</string>
    <string name="digital_marketing">Digital marketing</string>
    <string name="trading">Trading</string>
    <string name="design">Design</string>
    <string name="programming_amp_tech"><![CDATA[Programming & Tech]]></string>
    <string name="ai_services">AI services</string>
    <string name="categories">Categories</string>
    <string name="business">Business</string>
    <string name="top_rated">Top rated</string>
    <string name="competences">competences</string>
    <string name="ajouter_une_competence">Ajouter une competence</string>
    <string name="titre">titre</string>
    <string name="description_competence">description_competence</string>
    <string name="creer_un_compte">creer un compte</string>
    <string name="envoyer">envoyer</string>
    <string name="type_your_message">Type your message...</string>
    <string name="message">message</string>
    <string name="entrez_votre_domaine">entrez votre domaine</string>
    <string name="entrez_votre_description">Entrez votre description</string>
    <string name="description_facultatif">Description (facultatif)</string>
    <string name="contacter">Contacter</string>
</resources>