<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Icon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Forgotpassword">

    <!-- Titre -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="129dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/skills_nobg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="74dp"
        android:text="@string/forgot_password"
        android:textSize="24sp"
        android:textStyle="bold" />


    <!-- Champ de saisie pour l'e-mail -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/e_mail"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_e_mail"
        android:inputType="textEmailAddress" />

    <!-- Champ de saisie pour le mot de passe -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_mot_de_passe"
        android:inputType="textPassword" />

    <!-- Bouton de validation -->
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="#1A123B"
        android:text="@string/reset_password"
        android:textColor="@color/white" />

</LinearLayout>
