<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E95BD"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="51dp"
                android:layout_height="82dp"
                android:layout_marginEnd="33dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:src="@drawable/skills_nobg"
                android:contentDescription="@string/logo" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="162dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:paddingStart="100dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon"
                android:onClick="ProfileButton"
                android:contentDescription="@string/icon" />

        </LinearLayout>
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/search_view_background"
            android:iconifiedByDefault="false"
            android:queryHint="Search users"
            android:theme="@style/CustomSearchView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:typeface="serif"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="#797588"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/digital_marketing"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/ai_services"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/trading"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/business"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/programming_amp_tech"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/design"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_rated"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:typeface="serif"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="#797588"
            android:layout_marginBottom="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</LinearLayout>
