<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Header containing the name of the user -->
    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
    android:textSize="20sp"
    android:textStyle="bold"
    android:padding="8dp"
    android:gravity="center"
    android:background="@drawable/button"
    android:textColor="@android:color/white"
    android:layout_marginBottom="8dp" />

    <!-- RecyclerView to display messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:scrollbars="vertical" />

    <!-- Message input area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:background="@drawable/border"
            android:textSize="30sp"
            android:padding="8dp"
            android:maxLines="4"
            android:minLines="1"
            android:gravity="top" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginStart="8dp" />

    </LinearLayout>
</LinearLayout>
